k8s/overwatch/homepage/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage-deployment
  namespace: overwatch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      serviceAccountName: homepage-sa
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:latest
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            # Mount the shared volume containing the finished config files
            - name: processed-config-vol
              mountPath: /app/config
      volumes:
        # Volume for the source templates, populated by a ConfigMap
        - name: config-templates-vol
          configMap:
            name: homepage-config-template
        # The shared, writable emptyDir volume that both containers can access
        - name: processed-config-vol
          emptyDir: {}
