k8s/overwatch/homepage/04-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage-ingressroute
  namespace: overwatch
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`homepage.localdev`)
      kind: Rule
      services:
        - name: homepage-service
          port: 3000
